--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,22 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+#head-container {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 16px;
+}
+
+#items-container {
+    display:flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+#bread-image {
+    max-width: 400px;
+}
+
 h1 {
     font-family: "Qwitcher Grypen";
     font-size: 128px;
@@ -46,11 +62,30 @@ p {
 }
 
 ul {
+    display: flex;
+    flex-wrap: wrap;
     margin-bottom: 32px;
     margin-left: 16px;
-    list-style-type: disc;
+    list-style-type: none;
 }
 
 li {
-    margin-bottom: 16px;
+    width: 40%;
+    margin: 16px;
+}
+
+button {
+    width: 100%;
+    background-color: white;
+    border: 2px solid lightgray;
+    border-radius: 4px;
+}
+
+#button-title {
+    font-weight: bold;
+}
+
+#button-price {
+    font-style: italic;
+    color: gray;
 }
