button inner ids changed to classes

--- a/pass-bakery-fe/src/App.css
+++ b/pass-bakery-fe/src/App.css
@@ -97,11 +97,11 @@ button:hover {
   background-color: lightgray;
 }
 
-#button-title {
+.button-title {
   font-weight: bold;
 }
 
-#button-price {
+.button-price {
   font-style: italic;
   color: gray;
 }
